"ChangeLog"

# NOTE: the latest CVS tag must appear in the first 10 lines of this ChangeLog.
# This version tag is used in building "cvstag.h" for version identification.

2007-04-13	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-31:
	  Scheme-only revision: see scm/ChangeLog: rb-tree replaces alist.


2007-04-12	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-30:
	  Scheme-only revision: see scm/ChangeLog: rb-tree enhancements.


	* HACKT-00-01-04-main-00-81-15-scm-01-29:
	  Scheme-only revision: see scm/ChangeLog: new rb-tree implementation.


2007-04-10	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-28:
	  No compiled-source revision, only scheme additions, see scm/ChangeLog.
		Summary: branch-selection histogram construction, and
		other general utility procedures.  


2007-04-08	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-27:
	  guile/scm_chpsim_trace_streamer.cc: chpsim-trace-num-entries:
		allow argument to be string naming trace, or an
		already opened reverse-trace handle.
	  Critical path routines added to scm/hackt/chpsim-trace.scm.


2007-04-06	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-26:
	  guile/chpsim-wrap.cc: use reverse! in value-list construction
		to avoid unnecessary gc_allocation/deallocation.
	  See scm/ChangeLog for scheme additions for state-change stream
		operations.


2007-04-05	David Fang		<fangism@users.sourceforge.net>

	* HACKT-00-01-04-main-00-81-15-scm-01-25:
	  Quick clean-up only:
		Perm'd SCM_USE_SYMBOLIC_TYPE_TAGS and TRACE_ENTRY_START_INDEX.
		Purged unused code in sim/chpsim/TraceIterators.h.
	  scm/TODO: update: removed completed entries


	* HACKT-00-01-04-main-00-81-15-scm-01-24:
	  guile/chpsim-wrap.cc: Finished implementing state-change-stream 
		interface to chpsim trace files.