@@ -1,5 +1,5 @@
 # "test/chpsim/Makefile.am"
-#	$Id: Makefile.am,v 1.8.2.16 2007/04/11 03:05:09 fang Exp $
+#	$Id: Makefile.am,v 1.8.2.17 2007/04/14 23:05:51 fang Exp $
 # Test auto-Makefile for chpsim.  
 
 include $(top_srcdir)/test/Make.test-head
@@ -159,7 +159,7 @@ HACKT_CHPSIM_GUILE_TEST_SCRIPTS_PASSES = \
 	channel-sync-desync-a-13 \
 	bool-split-select-a-01 bool-split-select-a-02 \
 	bool-split-select-a-03 bool-split-select-a-04 \
-	bool-split-select-a-05 \
+	bool-split-select-a-05 bool-split-select-a-06 \
 	channel-sync-desync-a-14 channel-sync-desync-a-15 \
 	channel-sync-desync-a-16 channel-sync-desync-a-17 \
 	channel-sync-desync-a-18 channel-sync-desync-a-19 \
@@ -172,7 +172,10 @@ HACKT_CHPSIM_GUILE_TEST_SCRIPTS_PASSES = \
 	channel-sync-desync-a-32 channel-sync-desync-a-33 \
 	channel-sync-desync-a-34 channel-sync-desync-a-35 \
 	select-nested-loop-a-01 select-nested-loop-a-02 \
-	select-nested-loop-a-03 select-nested-loop-a-04
+	select-nested-loop-a-03 select-nested-loop-a-04 \
+	select-nested-loop-a-05 \
+	countdown-loop-a-01
+
 
 HACKT_CHPSIM_GUILE_TEST_SCRIPTS_FAILURES =
 
