@@ -1,0 +1,66 @@
+#!hacchpsimguile -b
+!#
+;; "bool-split-select-a-02.hacchpsimscm"
+;;	$Id: bool-split-select-a-06.hacchpsimscm,v 1.1.2.1 2007/04/14 23:05:53 fang Exp $
+;; vi: ft=scheme
+;; @haco@ bool-split-select-a.haco-a
+
+(use-modules (hackt chpsim-primitives))
+(use-modules (hackt chpsim))
+(use-modules (ice-9 streams))
+(use-modules (hackt streams))
+(use-modules (hackt rb-tree))
+
+(define x all-static-events-stream)
+(stream-for-each-display-newline x)
+
+(define E  (enumerate-interval-stream 0 (1- (hac:chpsim-num-events))))
+(define M (make-rb-tree = <))
+(stream-for-each
+  (lambda (e) (rb-tree/insert! M e #f))
+  E)
+M
+
+"successor lists: (unsorted)"
+(define succs (chpsim-assoc-event-successors all-static-events-stream))
+(stream-for-each-display-newline succs)
+
+"detect branch-joins: (prereq: predecessor map)"
+(define preds (make-rb-tree = <))
+(stream-for-each
+  (lambda (e) (rb-tree/insert! preds e (make-rb-tree = <)))
+  E)
+(rb-tree/for-each-display-newline preds)
+(stream-for-each
+  (lambda (x)
+    (for-each
+      (lambda (y)
+        (rb-tree/lookup-mutate! preds y
+          (lambda (z)
+            (rb-tree/insert! z (car x) '())
+          z)
+          #f)
+      ) ; end lambda
+      (cdr x)
+    ) ; end for-each
+  ) ; end lambda
+  succs
+)
+"predecessor map populated:"
+(rb-tree/for-each-display-newline preds)
+
+(exit)
+"TODO: find branch-joins"
+
+"do DFS on tree, marking branch nest levels:"
+(define (DFS index lvl)
+  (if (rb-tree/lookup M #f)
+    ...
+  )
+)
+
+"TODO: find loop-entries and loop-back events"
+
+(DFS 0) ; starting with the first event, of course
+
+
