@@ -1,0 +1,120 @@
+(0 . #<raw-chpsim-event-node: fork: null, pid: 0, #pred: 0, succ: 1 2 16 6 17 18 19 
+>)
+(1 . #<raw-chpsim-event-node: send: bool_source_constant::S!(true), pid: 1, #pred: 1, succ: 1 
+channel deps: 1 
+>)
+(2 . #<raw-chpsim-event-node: send: int_source::S!(0), pid: 2, #pred: 1, succ: 5 
+channel deps: 2 
+>)
+(3 . #<raw-chpsim-event-node: send: int_source::S!(3), pid: 2, #pred: 1, succ: 2 
+channel deps: 2 
+>)
+(4 . #<raw-chpsim-event-node: send: int_source::S!(2), pid: 2, #pred: 1, succ: 3 
+channel deps: 2 
+>)
+(5 . #<raw-chpsim-event-node: send: int_source::S!(1), pid: 2, #pred: 1, succ: 4 
+channel deps: 2 
+>)
+(6 . #<raw-chpsim-event-node: receive: bool_sink::B?(bool_sink::b), pid: 4, #pred: 1, succ: 6 
+channel deps: 3 
+>)
+(7 . #<raw-chpsim-event-node: null: null, pid: 3, #pred: 1, succ: 16 
+>)
+(8 . #<raw-chpsim-event-node: send: bool_split_select::O[0]!(bool_split_select::x), pid: 3, #pred: 1, succ: 7 
+channel deps: 3 
+>)
+(9 . #<raw-chpsim-event-node: send: bool_split_select::O[1]!(bool_split_select::x), pid: 3, #pred: 1, succ: 7 
+channel deps: 4 
+>)
+(10 . #<raw-chpsim-event-node: send: bool_split_select::O[2]!(bool_split_select::x), pid: 3, #pred: 1, succ: 7 
+channel deps: 5 
+>)
+(11 . #<raw-chpsim-event-node: send: bool_split_select::O[3]!(bool_split_select::x), pid: 3, #pred: 1, succ: 7 
+channel deps: 6 
+>)
+(12 . #<raw-chpsim-event-node: select: , pid: 3, #pred: 1, succ: 8 9 10 11 
+int deps: 1 
+>)
+(13 . #<raw-chpsim-event-node: null: , pid: 3, #pred: 2, succ: 12 
+>)
+(14 . #<raw-chpsim-event-node: receive: bool_split_select::C?(bool_split_select::c), pid: 3, #pred: 1, succ: 13 
+channel deps: 2 
+>)
+(15 . #<raw-chpsim-event-node: receive: bool_split_select::I?(bool_split_select::x), pid: 3, #pred: 1, succ: 13 
+channel deps: 1 
+>)
+(16 . #<raw-chpsim-event-node: fork: , pid: 3, #pred: 1, succ: 14 15 
+>)
+(17 . #<raw-chpsim-event-node: receive: bool_sink::B?(bool_sink::b), pid: 5, #pred: 1, succ: 17 
+channel deps: 4 
+>)
+(18 . #<raw-chpsim-event-node: receive: bool_sink::B?(bool_sink::b), pid: 6, #pred: 1, succ: 18 
+channel deps: 5 
+>)
+(19 . #<raw-chpsim-event-node: receive: bool_sink::B?(bool_sink::b), pid: 7, #pred: 1, succ: 19 
+channel deps: 6 
+>)
+((0 . #f) (1 . #f) (2 . #f) (3 . #f) (4 . #f) (5 . #f) (6 . #f) (7 . #f) (8 . #f) (9 . #f) (10 . #f) (11 . #f) (12 . #f) (13 . #f) (14 . #f) (15 . #f) (16 . #f) (17 . #f) (18 . #f) (19 . #f))
+"successor lists: (unsorted)"
+(0 1 2 16 6 17 18 19)
+(1 1)
+(2 5)
+(3 2)
+(4 3)
+(5 4)
+(6 6)
+(7 16)
+(8 7)
+(9 7)
+(10 7)
+(11 7)
+(12 8 9 10 11)
+(13 12)
+(14 13)
+(15 13)
+(16 14 15)
+(17 17)
+(18 18)
+(19 19)
+"detect branch-joins: (prereq: predecessor map)"
+(0 . ())
+(1 . ())
+(2 . ())
+(3 . ())
+(4 . ())
+(5 . ())
+(6 . ())
+(7 . ())
+(8 . ())
+(9 . ())
+(10 . ())
+(11 . ())
+(12 . ())
+(13 . ())
+(14 . ())
+(15 . ())
+(16 . ())
+(17 . ())
+(18 . ())
+(19 . ())
+"predecessor map populated:"
+(0 . ())
+(1 . ((0) (1)))
+(2 . ((0) (3)))
+(3 . ((4)))
+(4 . ((5)))
+(5 . ((2)))
+(6 . ((0) (6)))
+(7 . ((8) (9) (10) (11)))
+(8 . ((12)))
+(9 . ((12)))
+(10 . ((12)))
+(11 . ((12)))
+(12 . ((13)))
+(13 . ((14) (15)))
+(14 . ((16)))
+(15 . ((16)))
+(16 . ((0) (7)))
+(17 . ((0) (17)))
+(18 . ((0) (18)))
+(19 . ((0) (19)))
