@@ -1,0 +1,46 @@
+#!hacchpsimguile -b
+!#
+;; "select-nested-loop-a-03.hacchpsimscm"
+;; copy-modified from "select-nested-loop-a-02.hacchpsimscm"
+;; vi: ft=scheme
+;;	$Id: select-nested-loop-a-05.hacchpsimscm,v 1.1.2.1 2007/04/14 23:05:55 fang Exp $
+;; @haco@ select-nested-loop-a.haco-a
+
+;; Testing histogram construction, using defined functions
+
+; (use-modules (hackt chpsim-primitives))
+(use-modules (hackt chpsim-trace))
+(use-modules (hackt chpsim-primitives))
+(use-modules (hackt chpsim))
+; (use-modules (hackt algorithm)) ; for find-assoc-ref
+(use-modules (hackt streams))
+(use-modules (ice-9 streams))
+; (use-modules (srfi srfi-1))	; for alist (associative lists)
+
+; "all static events:"
+; (define all-static-events-stream (static-event-stream))
+; (stream-for-each-display-newline all-static-events-stream)
+
+(define select-events
+  (chpsim-filter-static-events-select all-static-events-stream))
+; "all select-events:"
+; (stream-for-each-display-newline select-events)
+
+(define branches
+  (stream-filter
+    (lambda (e) (hac:chpsim-event-branch? (static-event-raw-entry e)))
+    all-static-events-stream)
+)
+"branches:"
+(stream-for-each-display-newline branches)
+
+
+(define do-whiles
+  (stream-filter
+    (lambda (e) (hac:chpsim-event-do-while? (static-event-raw-entry e)))
+    all-static-events-stream)
+)
+"should be empty:"
+(stream-for-each-display-newline do-whiles)
+
+
