@@ -1,0 +1,8 @@
+"branches:"
+(9 . #<raw-chpsim-event-node: select: , pid: 0, #pred: 1, succ: 7 8 
+>)
+(16 . #<raw-chpsim-event-node: select: , pid: 0, #pred: 1, succ: 14 15 
+>)
+(17 . #<raw-chpsim-event-node: select: , pid: 0, #pred: 1, succ: 9 16 
+>)
+"should be empty:"
